@@ -1,6 +1,9 @@
 # ChangeLog for app-text/llpp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/llpp/ChangeLog,v 1.2 2011/01/31 21:01:38 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/llpp/ChangeLog,v 1.3 2011/02/01 15:50:16 xmw Exp $
+
+  01 Feb 2011; Michael Weber <xmw@gentoo.org> llpp-9999.ebuild:
+  added x11-misc/xsel for selection to x clipboard
 
   31 Jan 2011; Michael Weber <xmw@gentoo.org> llpp-9999.ebuild:
   added use flage dependecy glut for dev-ml/lablgl
